--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
-  "type": "module",
   "scripts": {
     "str": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -12,6 +11,7 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.16.4",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "uniqid": "^5.4.0"
   }
 }
